Recurso de Link ancora no menu principal

--- a/view/front/contato.html
+++ b/view/front/contato.html
@@ -1,1 +1,10 @@
-<h5 style="margin: 5px 0px 5px 0px;">FUTURA PAGINA DE CONTATO</h5>
+
+<!-- Quem somos-->
+<div class="row" id="tituloContato">
+        <div class="col-12 text-left my-3">
+            <h2 class="display-6 text-dark">
+                <i class="fa fa-question-circle"></i>
+                <u>Contato</u>
+            </h2>
+        </div>
+      </div>
