--- a/view/front/quemSomos.html
+++ b/view/front/quemSomos.html
@@ -1,78 +1,87 @@
 
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 text-center">
-              <h1 class="display-4">Quem somos</h1>
-              <p class="lead">Saiba mais sobre a Bubu Turismo e nossos serviços</p>
-              <hr />
-            </div>
-          </div>
-          <div class="row mt-2">
-            <div class="col-12">
-              <ul class="nav nav-pills justify-content-center mb-5" id="pillsNav" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link active" id="nav-pills-01" data-toggle="pill" href="#nav-item-01">Nossa historia</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="nav-pills-02" data-toggle="pill" href="#nav-item-02">Clientes</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="nav-pills-03" data-toggle="pill" href="#nav-item-03">Endereço</a>
-                </li>
-              </ul>
-              <div class="tab-content" id="nav-pills-content">
+<!-- Quem somos-->
+<div class="row" id="tituloQuemSomos">
+  <div class="col-12 text-left my-3">
+      <h2 class="display-6 text-dark">
+          <i class="fa fa-question-circle"></i>
+          <u>Quem Somos</u>
+      </h2>
+  </div>
+</div>
+<!-- Quem somos-->
+<div class="row" id="tituloQuemSomos">
+  <div class="col-12 text-left my-3">
+      <h2 class="display-6 text-dark">
+          <i class="fa fa-question-circle"></i>
+          <u>Quem Somos</u>
+      </h2>
+  </div>
+</div>
+    <div class="container">
+      <hr />
+      <div class="row mt-2">
+        <div class="col-12">
+          <ul class="nav nav-pills justify-content-center mb-5" id="pillsNav" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="nav-pills-01" data-toggle="pill" href="#nav-item-01">Nossa historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-pills-02" data-toggle="pill" href="#nav-item-02">Clientes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-pills-03" data-toggle="pill" href="#nav-item-03">Endereço</a>
+            </li>
+          </ul>
+          <div class="tab-content" id="nav-pills-content">
 
-                <!-- Seção quem somos / Nossa Historia-->
-                <div class="tab-pane fade show active" id="nav-item-01" role="tabpanel">
-                  <div class="row">
-                    <div class="col-sm-6 text-right">
-                      <div class="">
-                        <img src="../imagens/diversas/FotoExemploQuemSomos.png" alt="">
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mollis justo erat, eu pretium justo accumsan a. Praesent nibh ex, lacinia ut cursus efficitur, ornare non mi. Pellentesque consequat feugiat augue, pellentesque porttitor eros eleifend vel. Vestibulum eu dapibus metus. Vestibulum turpis metus, egestas a velit in, eleifend tristique neque. Cras eget urna ligula. Pellentesque consequat, orci vel viverra consectetur, odio metus semper leo, non feugiat justo metus lobortis magna. Mauris et nulla massa. Cras auctor purus diam, porttitor maximus dolor ultrices sodales. Mauris sodales ullamcorper tortor sed sagittis. Pellentesque eu hendrerit justo, sit amet venenatis nibh.
-                          <br><br>
-                          Praesent pulvinar consequat enim, nec aliquet ante accumsan vitae. Quisque ornare scelerisque risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris laoreet in turpis eu tincidunt. Mauris sed hendrerit nibh, eget volutpat eros. Pellentesque dictum, nisi a aliquam venenatis, velit magna malesuada nisi, et viverra nunc sapien ultrices felis. Fusce ullamcorper libero sem, in pulvinar orci dictum quis. 
-                      </p>
-                    </div>
+            <!-- Seção quem somos / Nossa Historia-->
+            <div class="tab-pane fade show active" id="nav-item-01" role="tabpanel">
+              <div class="row">
+                <div class="col-sm-6 text-right">
+                  <div class="">
+                    <img src="../imagens/diversas/FotoExemploQuemSomos.png" alt="">
                   </div>
                 </div>
-                 <!-- Seção quem somos / Clientes -->
-                <div class="tab-pane fade" id="nav-item-02" role="tabpanel">
-                  <div class="row">
-                    <div class="col-sm-6 text-right">
-                        <img src="../imagens/diversas/clientes.jpg">
-                    </div>
-                    <div class="col-sm-6">
-                      <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mollis justo erat, eu pretium justo accumsan a. Praesent nibh ex, lacinia ut cursus efficitur, ornare non mi. Pellentesque consequat feugiat augue, pellentesque porttitor eros eleifend vel. Vestibulum eu dapibus metus. Vestibulum turpis metus, egestas a velit in, eleifend tristique neque. Cras eget urna ligula. Pellentesque consequat, orci vel viverra consectetur, odio metus semper leo, non feugiat justo metus lobortis magna. Mauris et nulla massa. Cras auctor purus diam, porttitor maximus dolor ultrices sodales. Mauris sodales ullamcorper tortor sed sagittis. Pellentesque eu hendrerit justo, sit amet venenatis nibh. 
-                      </p>
-                    </div>
+                <div class="col-sm-6">
+                  <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mollis justo erat, eu pretium justo accumsan a. Praesent nibh ex, lacinia ut cursus efficitur, ornare non mi. Pellentesque consequat feugiat augue, pellentesque porttitor eros eleifend vel. Vestibulum eu dapibus metus. Vestibulum turpis metus, egestas a velit in, eleifend tristique neque. Cras eget urna ligula. Pellentesque consequat, orci vel viverra consectetur, odio metus semper leo, non feugiat justo metus lobortis magna. Mauris et nulla massa. Cras auctor purus diam, porttitor maximus dolor ultrices sodales. Mauris sodales ullamcorper tortor sed sagittis. Pellentesque eu hendrerit justo, sit amet venenatis nibh.
+                      <br><br>
+                      Praesent pulvinar consequat enim, nec aliquet ante accumsan vitae. Quisque ornare scelerisque risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris laoreet in turpis eu tincidunt. Mauris sed hendrerit nibh, eget volutpat eros. Pellentesque dictum, nisi a aliquam venenatis, velit magna malesuada nisi, et viverra nunc sapien ultrices felis. Fusce ullamcorper libero sem, in pulvinar orci dictum quis. 
+                  </p>
+                </div>
+              </div>
+            </div>
+              <!-- Seção quem somos / Clientes -->
+            <div class="tab-pane fade" id="nav-item-02" role="tabpanel">
+              <div class="row">
+                <div class="col-sm-6 text-right">
+                    <img src="../imagens/diversas/clientes.jpg">
+                </div>
+                <div class="col-sm-6">
+                  <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mollis justo erat, eu pretium justo accumsan a. Praesent nibh ex, lacinia ut cursus efficitur, ornare non mi. Pellentesque consequat feugiat augue, pellentesque porttitor eros eleifend vel. Vestibulum eu dapibus metus. Vestibulum turpis metus, egestas a velit in, eleifend tristique neque. Cras eget urna ligula. Pellentesque consequat, orci vel viverra consectetur, odio metus semper leo, non feugiat justo metus lobortis magna. Mauris et nulla massa. Cras auctor purus diam, porttitor maximus dolor ultrices sodales. Mauris sodales ullamcorper tortor sed sagittis. Pellentesque eu hendrerit justo, sit amet venenatis nibh. 
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- Seção quem somos / Clientes -->
+            <div class="tab-pane fade" id="nav-item-03" role="tabpanel">
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item"src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d987.6344281869505!2d-34.8823575!3d-8.046502!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab188d655e10af%3A0x5619ca2f77fd84ca!2sR.+Numa+Pompilho%2C+175+-+Santo+Amaro%2C+Recife+-+PE%2C+50100-330!5e0!3m2!1spt-BR!2sbr!4v1541992814420" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                   </div>
                 </div>
-                <!-- Seção quem somos / Clientes -->
-                <div class="tab-pane fade" id="nav-item-03" role="tabpanel">
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item"src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d987.6344281869505!2d-34.8823575!3d-8.046502!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab188d655e10af%3A0x5619ca2f77fd84ca!2sR.+Numa+Pompilho%2C+175+-+Santo+Amaro%2C+Recife+-+PE%2C+50100-330!5e0!3m2!1spt-BR!2sbr!4v1541992814420" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <p>
-                        Nosso endereço fica na rua Numa Pompilho, 175 - Santo Amaro
-                        <br>
-                        Recife-PE
-                      </p>
-                    </div>
-                  </div>
+                <div class="col-sm-6">
+                  <p>
+                    Nosso endereço fica na rua Numa Pompilho, 175 - Santo Amaro
+                    <br>
+                    Recife-PE
+                  </p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- /aula-8- jumbotron -->
+    </div>
