--- a/view/css/estilos_backend.css
+++ b/view/css/estilos_backend.css
@@ -166,3 +166,11 @@
 .filterable .filters input[disabled]:-ms-input-placeholder {
   color: #333;
 }
+
+/* Imagem de exibição do usuário*/
+#img_usuario_detalhe {
+  max-width:150px;
+  max-height:150px;
+  width: auto;
+  height: auto;
+}
