Manutenção no caso de uso Carrinho

--- a/view/css/estilos_frontend.css
+++ b/view/css/estilos_frontend.css
@@ -19,8 +19,8 @@
 }
 
 #hr-detalhe-pacote {
-    background-color: darkblue;
-    height: 3px;
+    background-color: dimgrey;
+    height: 1px;
     width: 100%;
   }
 
