--- a/view/css/estilos_backend.css
+++ b/view/css/estilos_backend.css
@@ -203,3 +203,30 @@
 
 } 
 .pass_show .ptxt:hover{color: #333333;} 
+
+/** Pagina de Overview*/
+
+.count{
+  font-size: 25px;
+  line-height: 47px;
+  font-weight: 600;
+  border-right: solid 2px;
+  color: #73879C;
+  font-family: "Helvetica Neue",Roboto,Arial,"Droid Sans",sans-serif;
+}
+
+.count_top{
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.471;
+  color: #73879C;
+  font-family: "Helvetica Neue",Roboto,Arial,"Droid Sans",sans-serif;
+}
+
+.x_panel{
+  width: 450px;
+  padding: 10px 17px;
+  display: inline-block;
+  background: #fff;
+  border: 2px solid #E6E9ee;
+}
