--- a/view/css/estilos_backend.css
+++ b/view/css/estilos_backend.css
@@ -453,4 +453,7 @@ body.lb-disable-scrolling {
   max-height:150px;
   width: auto;
   height: auto;
+  border-radius: 6px;
+  background: #fff;
+  padding: 1px; 
 }
