Remoção do texto explicativo no carousel da pagina inicial

--- a/view/css/estilos_backend.css
+++ b/view/css/estilos_backend.css
@@ -173,6 +173,8 @@
 #img_usuario_detalhe {
   max-width:150px;
   max-height:150px;
+  border-radius: 6px;
+  background: #fff;
   width: auto;
   height: auto;
 }
