Atualizacao da Central de Mensagens

--- a/view/front/contato.html
+++ b/view/front/contato.html
@@ -7,4 +7,21 @@
                 <u>Contato</u>
             </h2>
         </div>
-      </div>
+
+                <div class="col-sm-6">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item"src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d987.6344281869505!2d-34.8823575!3d-8.046502!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab188d655e10af%3A0x5619ca2f77fd84ca!2sR.+Numa+Pompilho%2C+175+-+Santo+Amaro%2C+Recife+-+PE%2C+50100-330!5e0!3m2!1spt-BR!2sbr!4v1541992814420" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <p>
+                    Nosso endereço fica na rua Numa Pompilho, 175 - Santo Amaro
+                    <br>
+                    Recife-PE
+                    <br>
+                    Telefone: (81) 9 8326-9077
+                  </p>
+                </div>
+              </div>
+
+</div>
